WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15693
[GTK] Paging does not work when widget is added to a GtkScrolledWindow
https://bugs.webkit.org/show_bug.cgi?id=15693
Summary
[GTK] Paging does not work when widget is added to a GtkScrolledWindow
Alp Toker
Reported
2007-10-25 12:58:52 PDT
Nothing happens when you try to page the view.
Attachments
Fix, as per GTK+ convention
(2.08 KB, patch)
2007-10-25 12:59 PDT
,
Alp Toker
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alp Toker
Comment 1
2007-10-25 12:59:46 PDT
Created
attachment 16864
[details]
Fix, as per GTK+ convention
Alp Toker
Comment 2
2007-10-25 19:57:55 PDT
Fixed in
r27083
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug