2007-10-26  Alp Toker  <alp@atoker.com>

Reviewed by Mark Rowe.

        http://bugs.webkit.org/show_bug.cgi?id=15693
        [GTK] Paging does not work when widget is added to a GtkScrolledWindow

        Eliminate MagicGtkScrollConstant in favour of the same calculations as
        GtkTextView for step and page increments. This also makes paging work,
        as the page increment was previously always 0.

        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollView::updateScrollbars):



Canonical link: https://commits.webkit.org/21008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27083 268f45cc-cd09-0410-ab3c-d52691b4dbfc